--- a/css/override.css
+++ b/css/override.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
 .background {
     background: rgba(255, 255, 255, 0.75);
     padding: 20px !important;
@@ -24,23 +26,56 @@
 }
 
 .logo-footer img {
-    background: rgba(255, 255, 255, 0.7);
-    border-radius: 5px;
+    opacity: 0.65;
+    width: 30%;
+    margin:10px;
 }
-
 
 .reveal section img {
     border: none;
+    box-shadow: none;
 }
 
-.reveal pre code {
+.reveal section img.esquema {
+    max-width: 650px;
+    margin: 40px 0;
+}
+
+.reveal h1, .reveal h2 {
+    font-family: 'Roboto', sans-serif;
+    text-transform: none;
+    font-size: 60px;
+}
+
+.reveal h2 {
+    font-size: 30px;
+    opacity: 0.60;
+    margin-top: -20px;
+}
+
+/*.reveal pre code {
     color: #333;
     background: #f8f8f8;
 }
 
 .reveal code {
-    padding: 2px 4px;
     color: #c7254e;
     background-color: #f9f2f4;
     border-radius: 4px;
+}*/
+
+.reveal pre code {
+    padding: 0 30px;
+}
+
+.etiquetasi {
+    position: fixed;
+    left: 100px;
+    top: 190px;
+    width: 340px;
+}
+
+p.etiquetasi {
+    font-size: 30px;
+    color: gray;
 }
